src/lexer/src/grammar/gen/pnpParser.java
// Generated from D:/Workspace/PNP/src/lexer/src/grammar\pnp.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class pnpParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, PROCEDIMENTO=6, ENTRADA=7, SAIDA=8, 
		INICIO=9, FIM=10, SE=11, ENTAO=12, SENAO=13, PARA=14, DE=15, ATE=16, PASSO=17, 
		REPITA=18, ENQUANTO=19, FACA=20, INTEIRO=21, RACIONAL=22, BOOLEANO=23, 
		CARACTERE=24, STRING=25, NULO=26, IGUALDADE=27, DESIGUALDADE=28, MAIOR=29, 
		MAIOR_IGUAL=30, MENOR=31, MENOR_IGUAL=32, ADICAO=33, SUBTRACAO=34, MULTIPLICACAO=35, 
		DIVISAO_RAC=36, DIVISAO_INT=37, MODULO=38, AND=39, OR=40, XOR=41, NOT=42, 
		ATRIBUICAO=43, INTEIRO_LITERAL=44, RACIONAL_LITERAL=45, BOOLEANO_LITERAL=46, 
		CARACTERE_LITERAL=47, STRING_LITERAL=48, ID=49, WS=50;
	public static final int
		RULE_arquivo = 0, RULE_procedimento = 1, RULE_procedimento_declaracao = 2, 
		RULE_procedimento_entrada = 3, RULE_procedimento_saida = 4, RULE_procedimento_bloco = 5, 
		RULE_procedimento_variavel_declaracao = 6, RULE_bloco = 7, RULE_bloco_variavel_declaracao = 8, 
		RULE_comando = 9, RULE_statement = 10, RULE_operacao_relacional = 11, 
		RULE_operacao_logica = 12, RULE_operacao = 13, RULE_variavel_declaracao = 14, 
		RULE_variavel_atribuicao = 15, RULE_expressao = 16, RULE_expressao_booleana = 17, 
		RULE_funcao = 18, RULE_params = 19, RULE_se_statement = 20, RULE_se_inicio = 21, 
		RULE_se_entao = 22, RULE_se_senao = 23, RULE_se_senao_se = 24, RULE_senao_se = 25, 
		RULE_para_statement = 26, RULE_para_inicio = 27, RULE_para_intervalo = 28, 
		RULE_para_passo = 29, RULE_para_bloco = 30, RULE_enquanto_statement = 31, 
		RULE_enquanto_inicio = 32, RULE_enquanto_bloco = 33, RULE_tipo = 34, RULE_operador = 35, 
		RULE_operador_relacional = 36, RULE_operador_aritmetico = 37, RULE_operador_logico = 38, 
		RULE_valor_literal = 39, RULE_numero_literal = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"arquivo", "procedimento", "procedimento_declaracao", "procedimento_entrada", 
			"procedimento_saida", "procedimento_bloco", "procedimento_variavel_declaracao", 
			"bloco", "bloco_variavel_declaracao", "comando", "statement", "operacao_relacional", 
			"operacao_logica", "operacao", "variavel_declaracao", "variavel_atribuicao", 
			"expressao", "expressao_booleana", "funcao", "params", "se_statement", 
			"se_inicio", "se_entao", "se_senao", "se_senao_se", "senao_se", "para_statement", 
			"para_inicio", "para_intervalo", "para_passo", "para_bloco", "enquanto_statement", 
			"enquanto_inicio", "enquanto_bloco", "tipo", "operador", "operador_relacional", 
			"operador_aritmetico", "operador_logico", "valor_literal", "numero_literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "','", "':'", "'('", "')'", "'procedimento'", "'entrada'", 
			"'saida'", "'inicio'", "'fim'", "'se'", "'entao'", "'senao'", "'para'", 
			"'de'", "'ate'", "'passo'", "'repita'", "'enquanto'", "'faca'", "'inteiro'", 
			"'racional'", "'booleano'", "'caractere'", "'string'", "'nulo'", "'='", 
			"'<>'", "'>'", "'>='", "'<'", "'<='", "'+'", "'-'", "'*'", "'/'", "'div'", 
			"'mod'", "'e'", "'ou'", "'xor'", "'nao'", "'<-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, "PROCEDIMENTO", "ENTRADA", "SAIDA", 
			"INICIO", "FIM", "SE", "ENTAO", "SENAO", "PARA", "DE", "ATE", "PASSO", 
			"REPITA", "ENQUANTO", "FACA", "INTEIRO", "RACIONAL", "BOOLEANO", "CARACTERE", 
			"STRING", "NULO", "IGUALDADE", "DESIGUALDADE", "MAIOR", "MAIOR_IGUAL", 
			"MENOR", "MENOR_IGUAL", "ADICAO", "SUBTRACAO", "MULTIPLICACAO", "DIVISAO_RAC", 
			"DIVISAO_INT", "MODULO", "AND", "OR", "XOR", "NOT", "ATRIBUICAO", "INTEIRO_LITERAL", 
			"RACIONAL_LITERAL", "BOOLEANO_LITERAL", "CARACTERE_LITERAL", "STRING_LITERAL", 
			"ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pnp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pnpParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ArquivoContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(pnpParser.EOF, 0); }
		public List<ProcedimentoContext> procedimento() {
			return getRuleContexts(ProcedimentoContext.class);
		}
		public ProcedimentoContext procedimento(int i) {
			return getRuleContext(ProcedimentoContext.class,i);
		}
		public ArquivoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arquivo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).enterArquivo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).exitArquivo(this);
		}
	}

	public final ArquivoContext arquivo() throws RecognitionException {
		ArquivoContext _localctx = new ArquivoContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_arquivo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(82);
				procedimento();
				}
				}
				setState(85); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==PROCEDIMENTO );
			setState(87);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProcedimentoContext extends ParserRuleContext {
		public Procedimento_declaracaoContext procedimento_declaracao() {
			return getRuleContext(Procedimento_declaracaoContext.class,0);
		}
		public Procedimento_blocoContext procedimento_bloco() {
			return getRuleContext(Procedimento_blocoContext.class,0);
		}
		public Procedimento_entradaContext procedimento_entrada() {
			return getRuleContext(Procedimento_entradaContext.class,0);
		}
		public Procedimento_saidaContext procedimento_saida() {
			return getRuleContext(Procedimento_saidaContext.class,0);
		}
		public ProcedimentoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedimento; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).enterProcedimento(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).exitProcedimento(this);
		}
	}

	public final ProcedimentoContext procedimento() throws RecognitionException {
		ProcedimentoContext _localctx = new ProcedimentoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_procedimento);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			procedimento_declaracao();
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ENTRADA) {
				{
				setState(90);
				procedimento_entrada();
				}
			}

			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SAIDA) {
				{
				setState(93);
				procedimento_saida();
				}
			}

			setState(96);
			procedimento_bloco();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Procedimento_declaracaoContext extends ParserRuleContext {
		public TerminalNode PROCEDIMENTO() { return getToken(pnpParser.PROCEDIMENTO, 0); }
		public TerminalNode ID() { return getToken(pnpParser.ID, 0); }
		public Procedimento_declaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedimento_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).enterProcedimento_declaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).exitProcedimento_declaracao(this);
		}
	}

	public final Procedimento_declaracaoContext procedimento_declaracao() throws RecognitionException {
		Procedimento_declaracaoContext _localctx = new Procedimento_declaracaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_procedimento_declaracao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(PROCEDIMENTO);
			setState(99);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Procedimento_entradaContext extends ParserRuleContext {
		public TerminalNode ENTRADA() { return getToken(pnpParser.ENTRADA, 0); }
		public Procedimento_variavel_declaracaoContext procedimento_variavel_declaracao() {
			return getRuleContext(Procedimento_variavel_declaracaoContext.class,0);
		}
		public Procedimento_entradaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedimento_entrada; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).enterProcedimento_entrada(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).exitProcedimento_entrada(this);
		}
	}

	public final Procedimento_entradaContext procedimento_entrada() throws RecognitionException {
		Procedimento_entradaContext _localctx = new Procedimento_entradaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_procedimento_entrada);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(ENTRADA);
			setState(102);
			procedimento_variavel_declaracao();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Procedimento_saidaContext extends ParserRuleContext {
		public TerminalNode SAIDA() { return getToken(pnpParser.SAIDA, 0); }
		public Procedimento_variavel_declaracaoContext procedimento_variavel_declaracao() {
			return getRuleContext(Procedimento_variavel_declaracaoContext.class,0);
		}
		public Procedimento_saidaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedimento_saida; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).enterProcedimento_saida(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).exitProcedimento_saida(this);
		}
	}

	public final Procedimento_saidaContext procedimento_saida() throws RecognitionException {
		Procedimento_saidaContext _localctx = new Procedimento_saidaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_procedimento_saida);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(SAIDA);
			setState(105);
			procedimento_variavel_declaracao();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Procedimento_blocoContext extends ParserRuleContext {
		public TerminalNode INICIO() { return getToken(pnpParser.INICIO, 0); }
		public BlocoContext bloco() {
			return getRuleContext(BlocoContext.class,0);
		}
		public TerminalNode FIM() { return getToken(pnpParser.FIM, 0); }
		public Procedimento_blocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedimento_bloco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).enterProcedimento_bloco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).exitProcedimento_bloco(this);
		}
	}

	public final Procedimento_blocoContext procedimento_bloco() throws RecognitionException {
		Procedimento_blocoContext _localctx = new Procedimento_blocoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_procedimento_bloco);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(INICIO);
			setState(108);
			bloco();
			setState(109);
			match(FIM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Procedimento_variavel_declaracaoContext extends ParserRuleContext {
		public List<Variavel_declaracaoContext> variavel_declaracao() {
			return getRuleContexts(Variavel_declaracaoContext.class);
		}
		public Variavel_declaracaoContext variavel_declaracao(int i) {
			return getRuleContext(Variavel_declaracaoContext.class,i);
		}
		public Procedimento_variavel_declaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedimento_variavel_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).enterProcedimento_variavel_declaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).exitProcedimento_variavel_declaracao(this);
		}
	}

	public final Procedimento_variavel_declaracaoContext procedimento_variavel_declaracao() throws RecognitionException {
		Procedimento_variavel_declaracaoContext _localctx = new Procedimento_variavel_declaracaoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_procedimento_variavel_declaracao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(111);
				variavel_declaracao();
				setState(112);
				match(T__0);
				}
				}
				setState(116); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlocoContext extends ParserRuleContext {
		public List<Bloco_variavel_declaracaoContext> bloco_variavel_declaracao() {
			return getRuleContexts(Bloco_variavel_declaracaoContext.class);
		}
		public Bloco_variavel_declaracaoContext bloco_variavel_declaracao(int i) {
			return getRuleContext(Bloco_variavel_declaracaoContext.class,i);
		}
		public List<ComandoContext> comando() {
			return getRuleContexts(ComandoContext.class);
		}
		public ComandoContext comando(int i) {
			return getRuleContext(ComandoContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public BlocoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).enterBloco(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).exitBloco(this);
		}
	}

	public final BlocoContext bloco() throws RecognitionException {
		BlocoContext _localctx = new BlocoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_bloco);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(118);
					bloco_variavel_declaracao();
					}
					} 
				}
				setState(123);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(128);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SE) | (1L << PARA) | (1L << ENQUANTO) | (1L << ID))) != 0)) {
				{
				setState(126);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ID:
					{
					setState(124);
					comando();
					}
					break;
				case SE:
				case PARA:
				case ENQUANTO:
					{
					setState(125);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bloco_variavel_declaracaoContext extends ParserRuleContext {
		public Variavel_declaracaoContext variavel_declaracao() {
			return getRuleContext(Variavel_declaracaoContext.class,0);
		}
		public Bloco_variavel_declaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloco_variavel_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).enterBloco_variavel_declaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).exitBloco_variavel_declaracao(this);
		}
	}

	public final Bloco_variavel_declaracaoContext bloco_variavel_declaracao() throws RecognitionException {
		Bloco_variavel_declaracaoContext _localctx = new Bloco_variavel_declaracaoContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_bloco_variavel_declaracao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			variavel_declaracao();
			setState(132);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComandoContext extends ParserRuleContext {
		public FuncaoContext funcao() {
			return getRuleContext(FuncaoContext.class,0);
		}
		public Variavel_atribuicaoContext variavel_atribuicao() {
			return getRuleContext(Variavel_atribuicaoContext.class,0);
		}
		public ComandoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comando; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).enterComando(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).exitComando(this);
		}
	}

	public final ComandoContext comando() throws RecognitionException {
		ComandoContext _localctx = new ComandoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_comando);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(136);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(134);
				funcao();
				}
				break;
			case 2:
				{
				setState(135);
				variavel_atribuicao();
				}
				break;
			}
			setState(138);
			match(T__0);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Se_statementContext se_statement() {
			return getRuleContext(Se_statementContext.class,0);
		}
		public Para_statementContext para_statement() {
			return getRuleContext(Para_statementContext.class,0);
		}
		public Enquanto_statementContext enquanto_statement() {
			return getRuleContext(Enquanto_statementContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_statement);
		try {
			setState(143);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case SE:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				se_statement();
				}
				break;
			case PARA:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				para_statement();
				}
				break;
			case ENQUANTO:
				enterOuterAlt(_localctx, 3);
				{
				setState(142);
				enquanto_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operacao_relacionalContext extends ParserRuleContext {
		public List<OperacaoContext> operacao() {
			return getRuleContexts(OperacaoContext.class);
		}
		public OperacaoContext operacao(int i) {
			return getRuleContext(OperacaoContext.class,i);
		}
		public Operador_relacionalContext operador_relacional() {
			return getRuleContext(Operador_relacionalContext.class,0);
		}
		public Operacao_relacionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacao_relacional; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).enterOperacao_relacional(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).exitOperacao_relacional(this);
		}
	}

	public final Operacao_relacionalContext operacao_relacional() throws RecognitionException {
		Operacao_relacionalContext _localctx = new Operacao_relacionalContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_operacao_relacional);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(145);
			operacao();
			setState(146);
			operador_relacional();
			setState(147);
			operacao();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operacao_logicaContext extends ParserRuleContext {
		public List<OperacaoContext> operacao() {
			return getRuleContexts(OperacaoContext.class);
		}
		public OperacaoContext operacao(int i) {
			return getRuleContext(OperacaoContext.class,i);
		}
		public Operador_logicoContext operador_logico() {
			return getRuleContext(Operador_logicoContext.class,0);
		}
		public Operacao_logicaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacao_logica; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).enterOperacao_logica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).exitOperacao_logica(this);
		}
	}

	public final Operacao_logicaContext operacao_logica() throws RecognitionException {
		Operacao_logicaContext _localctx = new Operacao_logicaContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_operacao_logica);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			operacao();
			setState(150);
			operador_logico();
			setState(151);
			operacao();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperacaoContext extends ParserRuleContext {
		public List<ExpressaoContext> expressao() {
			return getRuleContexts(ExpressaoContext.class);
		}
		public ExpressaoContext expressao(int i) {
			return getRuleContext(ExpressaoContext.class,i);
		}
		public List<OperadorContext> operador() {
			return getRuleContexts(OperadorContext.class);
		}
		public OperadorContext operador(int i) {
			return getRuleContext(OperadorContext.class,i);
		}
		public OperacaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).enterOperacao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof pnpListener ) ((pnpListener)listener).exitOperacao(this);
		}
	}
